@@ -69,7 +69,8 @@ Detailed changes:
 	- ADDED: IsTextureReady
 	- FIXED: UnloadTexture did not set texture id to NULL.
 	- ADDED: DrawBillboardPro
-	- ADDED: rlglGetVersion
+	- ADDED: rlGetVersion
+	- ADDED: More rlgl General render state functions.
 
 ------------------------------------------------------------------------
 Release:	ReiLua version 0.4.0		Using Raylib 4.2
